完善了贪食蛇代码 修复了 #1
close #1

--- a/css/snake.css
+++ b/css/snake.css
@@ -6,7 +6,17 @@ body{
 #game{
     position: absolute;
     margin-left: 10%;
-    margin-top: 70px;
+    margin-top: 5%;
+    border: 1px solid #62889F;
+    background-color: #d2f1dc;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px #353437;
+}
+
+#canvas{
+    position: absolute;
+    margin-left: 10%;
+    margin-top: 50%;
     border: 1px solid #62889F;
     background-color: #d2f1dc;
     border-radius: 5px;
